src/pages/Header/Header.module.css
.header {
	display: grid;
	grid-template-columns: 1fr auto 1fr;
	@media (max-width: 500px) {
		display: flex;
		justify-content: space-between;
	}

	align-items: center;
	padding: 12px 24px;
	gap: 32px;
	border-bottom: 1px solid var(--text-tertiary);
	background: var(--bg-secondary);
	user-select: none;

	top: 0;
	box-sizing: border-box;
	transition: transform 0.3s ease;

	&.sticky {
		position: sticky;
	}
	@media (pointer: fine) {
		&.absolute {
			position: absolute;
			width: 100%;
		}
		&.floating {
			&::after {
				content: "";
				position: absolute;
				top: 100%;
				width: 100%;
				height: 100%;
				transition: height 0.3s ease;
			}
			&:is(:hover, :focus-within) {
				z-index: 2;
				&::after {
					height: 0;
				}
			}
			&:not(:hover, :focus-within) {
				transform: translateY(-100%);
			}
		}
	}

	img {
		vertical-align: middle;
		[data-is-zack="false"] & {
			opacity: 0.9;
		}
		[data-is-zack="true"] & {
			opacity: 0.8;
		}
	}

	> :first-child {
		justify-self: start;
		display: flex;
		align-items: center;
		white-space: nowrap;

		@media (max-width: 500px) {
			display: none;
		}

		.logo {
			width: 24px;
			margin-right: 10px;
		}

		h1 {
			font-size: var(--text-large);
			font-weight: var(--weight-bold);
			margin: 0;
			color: var(--accent);
		}

		dl {
			display: flex;
			@media (max-width: 1000px) {
				display: none;
			}

			gap: 6px;
			margin: 0;
			margin-left: 24px;

			font-size: var(--text-small);
			color: var(--text-secondary);
			vertical-align: middle;

			dt {
				&::after {
					content: ":";
				}
			}
			dd {
				margin: 0;
			}
		}
	}

	nav {
		justify-self: center;

		display: flex;
		align-items: center;
		font-weight: var(--weight-semi-bold);
		/* bypassing main.css media queries for font size */
		font-size: 15px;

		gap: 32px;
		@media (max-width: 850px) {
			gap: 24px;
		}
		@media (500px < width <= 650px) {
			gap: 16px;
		}

		a {
			text-decoration: none;
			&:hover:not([aria-disabled="true"]) {
				text-decoration: underline;
			}

			color: var(--text-secondary);
			&[aria-disabled="true"] {
				color: var(--text-tertiary);
			}
			&.active {
				color: var(--accent);
			}
		}
	}

	> :last-child {
		justify-self: end;
		display: flex;
		align-items: center;

		gap: 24px;
		@media (500px < width <= 650px) {
			gap: 16px;
		}

		.github-icon {
			width: 18px;
			vertical-align: middle;
			[data-is-zack="false"] & {
				filter: invert(100%);
			}
		}
	}

	a:focus-visible {
		outline-offset: 2px;
		outline: 1px solid var(--accent);
		[data-is-zack="true"] & {
			outline-width: 2px;
		}
	}
}

.tooltip {
	text-align: center;
	max-width: 130px;
	font-size: var(--text-small);
	background: var(--bg-secondary);
	padding: 2px;

	border: 1px solid var(--accent);
	[data-is-zack="true"] & {
		border-width: 2px;
	}
}

